fix popup overflow

--- a/src/sass/mat-dialog.sass
+++ b/src/sass/mat-dialog.sass
@@ -1,3 +1,6 @@
+.cdk-global-overlay-wrapper
+  overflow: auto
+
 .dialog-padding-0
   .mat-dialog-container
     padding: 0
